--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -153,3 +153,14 @@ eclipse {
 		}
 	}
 }
+plugins {
+  id "org.sonarqube" version "4.4.1.3373"
+}
+
+sonar {
+  properties {
+    property "sonar.projectKey", "mohib988_spring-boot"
+    property "sonar.organization", "mohib988"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
+}
